# JediKnightGalaxies

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CreateVisualStudio2015Projects.bat  Extended Data.txt  LuaCommands.txt  README.md  START JKG.bat  server.cfg
ASSETS_JKG_COMPATIBILITY/: zzz_JKG_Coruscant_WZ.pk3
CMakeModules/: InstallConfig.cmake
JKGServer/: server.cfg
JKGServer/server/: accountlist.json
JKGalaxies/: Admin System.txt  JKG_Binds.cfg  JKG_Defaults.cfg  description.txt  trueview.cfg
JKGalaxies/glua/: cinbuilder.lua  emotes.lua  entcmds.lua  init.lua
JKGalaxies/server/: adminlist.json  ranks.json
JKGalaxies/shaders/: JKG_Cargo.shader  JKG_Crosshairs.shader  JKG_Explosions.shader  JKG_UI.shader  JKG_WaterFX.shader  JKG_WeaponIcons.shader  common.shader  effects.shader  ffa3.shader  gfx.shader  gfx2.shader  items.shader  minimap.shader  models.shader  mp.shader  mp2.shader  shop.shader  skies.shader  vjun.shader
JKGalaxies/ui/: jampingame.txt  jkgmenus.txt  menudef.h
codemp/: CMakeLists.txt  OpenJK.sln  openjk.vcxproj  openjk.vcxproj.filters  openjkded.vcxproj
codemp/GLua/: glua.h  glua_bitstream.cpp  glua_bitwise.cpp  glua_cryptography.cpp  glua_cvar.cpp  glua_encoding.cpp  glua_engine.cpp  glua_entity.cpp  glua_files.cpp  glua_json.cpp  glua_main.cpp  glua_npc.cpp  glua_player.cpp  glua_prng.cpp  glua_sys.cpp  glua_vector.cpp
codemp/RMG/: RM_Instance.h  RM_Terrain.cpp
codemp/botlib/: be_aas_entity.cpp  be_aas_main.cpp  be_aas_move.cpp  be_aas_reach.cpp  be_ai_chat.cpp  be_ai_goal.cpp  be_interface.cpp  l_precomp.cpp  l_script.cpp
codemp/cgame/: CMakeLists.txt  JK2_cgame.vcproj  animtable.h  cg_cinematics.cpp  cg_consolecmds.cpp  cg_crossover.cpp  cg_draw.c  cg_draw.cpp  cg_drawtools.c  cg_drawtools.cpp  cg_effects.c  cg_effects.cpp  cg_ents.cpp  cg_event.c  cg_event.cpp  cg_info.c  cg_info.cpp  cg_light.c  cg_light.cpp  cg_local.h  cg_localents.c  cg_localents.cpp  cg_main.c  cg_main.cpp  cg_marks.c  cg_marks.cpp  cg_newDraw.c  cg_newDraw.cpp  cg_players.c  cg_players.cpp  cg_playerstate.c  cg_playerstate.cpp  cg_predict.c  cg_predict.cpp  cg_public.h  cg_scoreboard.cpp  cg_servercmds.c  cg_servercmds.cpp  cg_snapshot.cpp  cg_spawn.c  (+42 more)
codemp/client/: FxPrimitives.cpp  FxScheduler.cpp  FxScheduler.h  FxSystem.cpp  FxSystem.h  FxTemplate.cpp  FxUtil.cpp  cl_cgame.cpp  cl_cgameapi.cpp  cl_cgameapi.h  cl_cin.cpp  cl_input.cpp  (+16 more)
codemp/game/: CMakeLists.txt  JK2_game.vcproj  JK2_game.vcxproj  JK2_game.vcxproj.filters  NPC.c  NPC.cpp  NPC_AI_Atst.c  NPC_AI_Atst.cpp  NPC_AI_Default.cpp  NPC_AI_Droid.c  NPC_AI_Droid.cpp  NPC_AI_GalakMech.cpp  NPC_AI_Grenadier.cpp  NPC_AI_Howler.cpp  NPC_AI_Humanoid.cpp  NPC_AI_ImperialProbe.c  NPC_AI_ImperialProbe.cpp  NPC_AI_Interrogator.c  NPC_AI_Interrogator.cpp  NPC_AI_Mark1.c  NPC_AI_Mark1.cpp  NPC_AI_Mark2.c  NPC_AI_Mark2.cpp  NPC_AI_MineMonster.cpp  NPC_AI_Rancor.c  NPC_AI_Rancor.cpp  NPC_AI_Remote.c  NPC_AI_Remote.cpp  NPC_AI_Seeker.c  NPC_AI_Seeker.cpp  NPC_AI_Sentry.cpp  NPC_AI_Sniper.cpp  NPC_AI_Stormtrooper.cpp  NPC_AI_Utils.c  NPC_AI_Utils.cpp  NPC_AI_Wampa.c  NPC_AI_Wampa.cpp  NPC_Animal.c  NPC_Animal.cpp  NPC_Conversations.cpp  (+185 more)
codemp/rd-gwz/: CMakeLists.txt  G2_API.cpp  glext.h  qgl.h  tr_WorldEffects.cpp  tr_animation.cpp  tr_awesomium.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cache.cpp  tr_cmds.cpp  tr_extensions.cpp  tr_extramath.h  tr_extratypes.h  tr_fbo.cpp  tr_flares.cpp  tr_ghoul2.cpp  tr_glsl.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_mapping.cpp  tr_mesh.cpp  tr_model.cpp  tr_model_iqm.cpp  tr_occlusion.cpp  tr_ocean.cpp  tr_ocean.h  tr_postprocess.cpp  tr_postprocess.h  tr_quicksprite.cpp  tr_scene.cpp  tr_shade.cpp  tr_shader.cpp  tr_skin.cpp  tr_sky.cpp  tr_surface.cpp  tr_surfacesprites.cpp  (+2 more)
codemp/rd-gwz/MaskedOcclusionCulling/: CullingThreadpool.cpp  CullingThreadpool.h  MaskedOcclusionCulling.cpp  MaskedOcclusionCulling.h  MaskedOcclusionCullingAVX2.cpp  MaskedOcclusionCullingCommon.inl
codemp/rd-gwz/ghoul2/: G2_gore.h  g2_local.h  ghoul2_shared.h
codemp/rd-gwz/glsl/: anaglyph_fp.glsl  anamorphic_blur_fp.glsl  anamorphic_combine_fp.glsl  compact.cpp  darkexpand_fp.glsl  depthOfField2_fp.glsl  depthOfField_fp.glsl  depthOfField_vp.glsl  depthblur_fp.glsl  esharpening2_fp.glsl  esharpening_fp.glsl  fakeDepthSteepParallax_fp.glsl  fakeDepth_fp.glsl  fakeDepth_vp.glsl  fxaa_fp.glsl  generateNormalMap_fp.glsl  generic_fp.glsl  generic_vp.glsl  hbaoCombine_fp.glsl  hbao_fp.glsl  lensflare_fp.glsl  lightall_fp.glsl  lightall_gs.glsl  lightall_vp.glsl  multipost_fp.glsl  shadowmask_fp.glsl  shadowmask_vp.glsl  ssao_fp.glsl  ssgi1_fp.glsl  ssgi2_fp.glsl  ssgi3_fp.glsl  ssgi4_fp.glsl  ssgi_vp.glsl  testshader_fp.glsl  testshader_vp.glsl  textureclean_fp.glsl  truehdr_fp.glsl  truehdr_vp.glsl  uniquesky_fp.glsl  uniquesky_vp.glsl  (+6 more)
codemp/rd-gwz/glsl2/: colorCorrection_fp.glsl  deferredLighting_fp.glsl  distanceBlur_fp.glsl  distanceBlur_vp.glsl  fastBlur_fp.glsl  fastBlur_vp.glsl  fogPost_fp.glsl  grass2_fp.glsl  grass2_gs.glsl  grass3_gs.glsl  grass_fp.glsl  grass_vp.glsl  occlusion_fp.glsl  occlusion_vp.glsl  pebbles_fp.glsl  pebbles_gs.glsl  pebbles_vp.glsl  rbm_fp.glsl  shadowPass_fp.glsl  shadowPass_vp.glsl  showNormals_fp.glsl  sss2_fp.glsl  sss2_vp.glsl  sss_fp.glsl  sss_vp.glsl  uqao_fp.glsl  uqao_vp.glsl  waterPost_fp.glsl  water_fp.glsl  water_vp.glsl
codemp/ui/: CMakeLists.txt  jkg_conversations.cpp  jkg_gangwars_ui.c  jkg_gangwars_ui.cpp  jkg_inventory.c  jkg_inventory.cpp  jkg_inventory.cpp.orig  jkg_inventory.h  jkg_loot.cpp  jkg_partymanager.cpp  jkg_partymanager.h  jkg_pazaak.cpp  jkg_shop.cpp  jkg_slice.cpp  keycodes.h  menudef.h  ui.vcproj  ui.vcxproj  ui.vcxproj.filters  ui_atoms.cpp  ui_crossover.cpp  ui_force.c  ui_force.cpp  ui_force.h  ui_gameinfo.cpp  ui_jkgscript.cpp  ui_local.h  ui_main.c  ui_main.cpp  ui_public.h  ui_saber.c  ui_saber.cpp  ui_servercmds.c  ui_servercmds.cpp  ui_shared.cpp  ui_shared.h  ui_stylesheets.c  ui_stylesheets.cpp  ui_syscalls.cpp  ui_xcvar.h
tools/: MoveDlls-Win.bat  travis-build.sh  useful_regex.txt
(+685 files in other folders)
